adds html structure + sass file for landing page

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 
 // Mixins
-// @import "components/prefixer";
 @import "components/mixins";
 @import "components/color";
 
@@ -22,3 +21,5 @@
 @import "components/buttons";
 @import "components/waves";
 @import "components/forms/forms";
+
+@import "wptheme";
